--- a/index.html
+++ b/index.html
@@ -268,12 +268,12 @@ background: #252525;
 .nav-menu li {
 margin: 15px 0;
 }
-}
 .brand-title {
-  font-family: 'Permanent Marker', cursive;
-  font-size: 2rem; /* Equivalent to Tailwind's text-3xl */
-  color: #218807;   /* Example of Tailwind's text-primary (adjust as needed) */
-  text-decoration: none;
+  font-family: 'Permanent Marker', cursive, Arial, sans-serif !important;
+  font-size: 2rem !important;
+  color: #218807 !important;
+  text-decoration: none !important;
+  display: inline-block;
 }
 #cartbutton {
   background-color: transparent;
@@ -1300,6 +1300,19 @@ margin: 15px 0;
        </i>
       </button>
      </div>
+
+     <!-- ADDED: Order summary area required by JS (checkoutItems & checkoutTotal) -->
+     <div class="mb-6">
+      <h4 class="font-bold mb-2">Order Summary</h4>
+      <div id="checkoutItems" class="max-h-40 overflow-auto space-y-2 text-sm text-gray-700">
+       <!-- populated by JS -->
+      </div>
+      <div class="flex justify-between items-center mt-4 pt-3 border-t">
+       <span class="font-bold">Total:</span>
+       <span id="checkoutTotal" class="font-bold">₹0.00</span>
+      </div>
+     </div>
+
      <form class="space-y-4" id="checkoutFormElement">
       <div>
        <label class="block text-sm font-medium text-gray-700 mb-1">
@@ -1535,111 +1548,127 @@ const checkoutItems = document.getElementById('checkoutItems');
 const checkoutTotal = document.getElementById('checkoutTotal');
 const checkoutSuccess = document.getElementById('checkoutSuccess');
 const continueShoppingBtn = document.getElementById('continueShoppingBtn');
+
+if (!cartButton || !cartItems || !cartCount || !cartSubtotal || !checkoutButton) {
+	// required UI pieces not present — avoid runtime errors
+	return;
+}
+
 let cart = [];
+
 function updateCart() {
-cartCount.textContent = cart.length;
-cartItems.innerHTML = '';
-let subtotal = 0;
-cart.forEach((item, index) => {
-subtotal += item.price;
-cartItems.innerHTML += `
-<div class="cart-item flex items-center gap-4 p-4 bg-gray-50 rounded-lg">
-<img src="${item.image}" alt="${item.name}" class="w-20 h-20 object-cover rounded">
-<div class="flex-grow">
-<h4 class="font-bold">${item.name}</h4>
-<p class="text-primary font-bold">₹${item.price.toFixed(2)}</p>
-</div>
-<button onclick="removeFromCart(${index})" class="text-gray-400 hover:text-red-500">
-<i class="ri-delete-bin-line ri-lg"></i>
-</button>
-</div>
-`;
-});
-cartSubtotal.textContent = `₹${subtotal.toFixed(2)}`;
+	cartCount.textContent = cart.length;
+	cartItems.innerHTML = '';
+	let subtotal = 0;
+	cart.forEach((item, index) => {
+		subtotal += item.price;
+		cartItems.innerHTML += `
+		<div class="cart-item flex items-center gap-4 p-4 bg-gray-50 rounded-lg">
+			<img src="${item.image}" alt="${item.name}" class="w-20 h-20 object-cover rounded">
+			<div class="flex-grow">
+				<h4 class="font-bold">${item.name}</h4>
+				<p class="text-primary font-bold">₹${item.price.toFixed(2)}</p>
+			</div>
+			<button onclick="removeFromCart(${index})" class="text-gray-400 hover:text-red-500">
+				<i class="ri-delete-bin-line ri-lg"></i>
+			</button>
+		</div>
+		`;
+	});
+	cartSubtotal.textContent = `₹${subtotal.toFixed(2)}`;
 }
+
 window.removeFromCart = function(index) {
-cart.splice(index, 1);
-updateCart();
+	cart.splice(index, 1);
+	updateCart();
 };
+
 function toggleCart() {
-cartPanel.classList.toggle('open');
-cartOverlay.classList.toggle('open');
-document.body.style.overflow = cartPanel.classList.contains('open') ? 'hidden' : '';
+	if (!cartPanel || !cartOverlay) return;
+	cartPanel.classList.toggle('open');
+	cartOverlay.classList.toggle('open');
+	document.body.style.overflow = cartPanel.classList.contains('open') ? 'hidden' : '';
 }
+
 cartButton.addEventListener('click', toggleCart);
-closeCart.addEventListener('click', toggleCart);
-cartOverlay.addEventListener('click', toggleCart);
-checkoutButton.addEventListener('click', function() {
-if (cart.length === 0) {
-const emptyCartMsg = document.createElement('div');
-emptyCartMsg.className = 'text-center py-4 text-gray-500';
-emptyCartMsg.textContent = 'Your cart is empty';
-cartItems.innerHTML = '';
-cartItems.appendChild(emptyCartMsg);
-return;
+if (closeCart) closeCart.addEventListener('click', toggleCart);
+if (cartOverlay) cartOverlay.addEventListener('click', toggleCart);
+
+if (checkoutButton) {
+	checkoutButton.addEventListener('click', function() {
+		if (cart.length === 0) {
+			const emptyCartMsg = document.createElement('div');
+			emptyCartMsg.className = 'text-center py-4 text-gray-500';
+			emptyCartMsg.textContent = 'Your cart is empty';
+			cartItems.innerHTML = '';
+			cartItems.appendChild(emptyCartMsg);
+			return;
+		}
+		if (checkoutForm) checkoutForm.classList.remove('hidden');
+		updateCheckoutSummary();
+	});
 }
-checkoutForm.classList.remove('hidden');
-updateCheckoutSummary();
-});
-closeCheckout.addEventListener('click', function() {
-checkoutForm.classList.add('hidden');
-});
+
+if (closeCheckout) {
+	closeCheckout.addEventListener('click', function() {
+		if (checkoutForm) checkoutForm.classList.add('hidden');
+	});
+}
+
 function updateCheckoutSummary() {
-checkoutItems.innerHTML = '';
-let total = 0;
-cart.forEach(item => {
-total += item.price;
-checkoutItems.innerHTML += `
-<div class="flex justify-between text-sm">
-<span>${item.name}</span>
-<span>$${item.price.toFixed(2)}</span>
-</div>
-`;
-});
-checkoutTotal.textContent = `$${total.toFixed(2)}`;
+	if (!checkoutItems || !checkoutTotal) return;
+	checkoutItems.innerHTML = '';
+	let total = 0;
+	cart.forEach(item => {
+		total += item.price;
+		checkoutItems.innerHTML += `
+		<div class="flex justify-between text-sm">
+			<span>${item.name}</span>
+			<span>₹${item.price.toFixed(2)}</span>
+		</div>
+		`;
+	});
+	checkoutTotal.textContent = `₹${total.toFixed(2)}`;
 }
-checkoutFormElement.addEventListener('submit', function(e) {
-e.preventDefault();
-checkoutFormElement.style.display = 'none';
-checkoutSuccess.classList.remove('hidden');
-cart = [];
-updateCart();
-});
-continueShoppingBtn.addEventListener('click', function() {
-checkoutForm.classList.add('hidden');
-checkoutFormElement.style.display = 'block';
-checkoutSuccess.classList.add('hidden');
-toggleCart();
-});
-// Add to Cart functionality for all product buttons
-document.querySelectorAll('button').forEach(button => {
-if (button.textContent.includes('Add to Cart')) {
-button.addEventListener('click', function(e) {
-const productCard = e.target.closest('.card');
-const name = productCard.querySelector('h3').textContent;
-const priceText = productCard.querySelector('.text-primary').textContent;
-const price = parseFloat(priceText.replace('₹', ''));
-const image = productCard.querySelector('img').src;
-cart.push({ name, price, image });
-updateCart();
-toggleCart();
-});
+
+if (checkoutFormElement) {
+	checkoutFormElement.addEventListener('submit', function(e) {
+		e.preventDefault();
+		checkoutFormElement.style.display = 'none';
+		if (checkoutSuccess) checkoutSuccess.classList.remove('hidden');
+		cart = [];
+		updateCart();
+	});
 }
-});
-// Smooth Scroll
-document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-anchor.addEventListener('click', function(e) {
-e.preventDefault();
-const targetId = this.getAttribute('href');
-const targetElement = document.querySelector(targetId);
-if (targetElement) {
-window.scrollTo({
-top: targetElement.offsetTop - 80,
-behavior: 'smooth'
-});
+
+if (continueShoppingBtn) {
+	continueShoppingBtn.addEventListener('click', function() {
+		if (checkoutForm) checkoutForm.classList.add('hidden');
+		if (checkoutFormElement) checkoutFormElement.style.display = 'block';
+		if (checkoutSuccess) checkoutSuccess.classList.add('hidden');
+		toggleCart();
+	});
 }
-});
-});
+
+// Add to Cart functionality — target product card buttons only
+document.querySelectorAll('.card button').forEach(button => {
+	if (button.textContent.includes('Add to Cart')) {
+		button.addEventListener('click', function(e) {
+			const productCard = e.target.closest('.card');
+			if (!productCard) return;
+			const nameEl = productCard.querySelector('h3');
+			const priceEl = productCard.querySelector('.text-primary');
+			const imgEl = productCard.querySelector('img');
+			if (!nameEl || !priceEl || !imgEl) return;
+			const name = nameEl.textContent.trim();
+			const priceText = priceEl.textContent.trim();
+			const price = parseFloat(priceText.replace(/[^0-9.]/g, '')) || 0;
+			const image = imgEl.src;
+			cart.push({ name, price, image });
+			updateCart();
+			toggleCart();
+		});
+	}
 });
   </script>
  </body>
